--- a/index.html
+++ b/index.html
@@ -4,78 +4,34 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Aries — Dashboard</title>
+  <style> html { overflow-y: scroll; } </style>
   <link rel="stylesheet" href="main.css">
-  <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    .hero {
-      display: grid;
-      grid-template-columns: 1fr 460px;
-      gap: 40px;
-      align-items: center;
-      min-height: calc(100vh - 140px);
-      max-width: 1180px;
-      margin: 0 auto;
-      padding: 40px 20px;
-    }
-    .hero-left { padding-left: 40px; }
-    .aries-word {
-      font-family: 'Luckiest Guy', Georgia, serif;
-      font-size: 120px;
-      line-height: 0.9;
-      margin: 0 0 8px 0;
-      color: #0c0c0c;
-      letter-spacing: 2px;
-    }
-    .aries-sub {
-      font-family: 'Montserrat', Arial, sans-serif;
-      font-size: 28px;
-      color: #666;
-      margin: 0;
-    }
-    .hero-right { display:flex; align-items:center; justify-content:center; }
-    .hero-right img { max-width:420px; width:100%; height:auto; display:block; }
-    @media (max-width: 900px) {
-      .hero { grid-template-columns: 1fr; text-align:center; padding: 28px 16px; gap: 18px; }
-      .hero-left { padding-left: 0; }
-      .aries-word { font-size: 64px; }
-      .hero-right img { max-width: 260px; }
-    }
-  </style>
 </head>
 <body>
-
-  <!-- Header -->
-<!-- HEADER (index.html) -->
 <header class="aries-topbar">
-    <button id="aries-hamburger" class="aries-hamburger" aria-label="Open sidebar">☰</button>
-
-    <!-- NO PROJECT MANAGER TITLE HERE -->
-
-    <a href="index.html" class="aries-brand">
-        <img src="goat.png" alt="Aries Logo" class="aries-logo">
-    </a>
+  <button id="aries-hamburger" class="aries-hamburger" aria-label="Open sidebar">☰</button>
+  <!-- no PROJECT MANAGER text here per request -->
+  <a href="index.html" class="aries-brand"><img src="goat.png" alt="Aries Logo" class="aries-logo"></a>
 </header>
 
-<!-- Sidebar (index.html) -->
-<aside id="aries-sidebar" class="aries-sidebar hidden" role="complementary" aria-label="Project list">
-  <!-- app.js will populate nav (static + dynamic projects) -->
+<div id="aries-overlay" class="hidden" aria-hidden="true"></div>
+<aside id="aries-sidebar" class="aries-sidebar hidden" role="complementary" aria-label="Project list" aria-hidden="true">
   <nav class="aries-sidebar-nav aries-sidebar-content" role="navigation" aria-label="Projects"></nav>
 </aside>
 
-  <main class="page-wrapper">
-    <section class="hero" role="main" aria-labelledby="hero-heading">
-      <div class="hero-left">
-        <h1 id="hero-heading" class="aries-word">Aries</h1>
-        <p class="aries-sub">King</p>
-      </div>
-      <div class="hero-right" aria-hidden="true">
-        <img src="images/goat.png" alt="Aries logo">
-      </div>
-    </section>
-  </main>
+<main class="page-wrapper">
+  <div style="max-width:1100px;margin:0 auto;padding:40px 20px;">
+    <div style="display:flex;align-items:center;justify-content:space-between;">
+      <h1 style="margin:0;font-size:64px;font-family:'Montserrat', Arial, sans-serif">ARIES</h1>
+      <img src="goat.png" alt="logo" style="width:260px;height:260px;object-fit:contain;">
+    </div>
+    <p style="margin-top:28px;color:#6b7280;font-size:18px">King</p>
+  </div>
+</main>
 
-  <script type="module" src="app.js"></script>
+<script type="module">
+  import './app.js';
+  // dashboard page has no special JS for now
+</script>
 </body>
 </html>
-
-
